# kite-protocol

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
bindings/bindings/: ClientMessage.ts  ServerMessage.ts
src/: agent_message.rs  extensions.rs  lib.rs  ws_messages.rs
